[gd_scene load_steps=6 format=3 uid="uid://bosom7y11rha3"]

[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="1_byn1s"]
[ext_resource type="Script" path="res://UI/RunSummary/RunSummary.gd" id="1_r0pi5"]

[sub_resource type="FontVariation" id="FontVariation_4axqc"]
base_font = ExtResource("1_byn1s")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk3cc"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt0ty"]
bg_color = Color(0.701961, 0.482353, 0.909804, 1)

[node name="RunSummary" type="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
size_flags_horizontal = 3
theme_override_constants/separation = 24
alignment = 1
script = ExtResource("1_r0pi5")

[node name="XpGained" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="XpGained"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 30
text = "Account XP Gained:"
horizontal_alignment = 1

[node name="AmountLabel" type="Label" parent="XpGained"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 30
text = "0"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxFlat_sk3cc")
theme_override_styles/fill = SubResource("StyleBoxFlat_rt0ty")

[node name="LevelUpLabel" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 36
text = "Level Up!"
horizontal_alignment = 1

[node name="ItemsUnlockedLabel" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
text = "Items Unlocked:"
horizontal_alignment = 1

[node name="ItemContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1
